@@ -6317,6 +6317,16 @@ Inst63Quest8ID1_HORDE = "29434"
 
 
 
+--------------- INST67 - Magisters' Terrace (ZA) ---------------
+
+
+
+
+--------------- INST68 - Sunwell Plateau (ZA) ---------------
+
+
+
+
 ---------------------------------------------------
 ---------------- BATTLEGROUNDS --------------------
 ---------------------------------------------------
